# go1-math-motion

./: README.md
go1-math-motion/: CMakeLists.txt  README.md  package.xml
go1-math-motion/include/: convert.h
go1-math-motion/launch/: circle.launch  figure8.launch  forward.launch
go1-math-motion/src/: backward_walk.cpp  circle_walk.cpp  circle_walk.py  figure8.cpp  forward_walk.cpp  twist_sub.cpp
unitree_legged_msgs/msg/: LowState.msg
